Fix scrollbar colors

--- a/src/main.css
+++ b/src/main.css
@@ -8,7 +8,7 @@
         @apply select-none outline-none;
 
         /* Scrollbar */
-        scrollbar-color: #2e5841 #1d3729;
+        scrollbar-color: rgb(147 51 234) rgb(192 132 252);
         scrollbar-width: thin;
     }
 
